--- a/WebAPIRegistration/Views/Member/Member.cshtml
+++ b/WebAPIRegistration/Views/Member/Member.cshtml
@@ -5,24 +5,56 @@
 <h2 style="text-align: center;">Member</h2>
 <script src="~/Scripts/jquery-1.7.1.min.js"></script>
 <script lang="ja" type="text/javascript">
+    function AllMembers() {
+        $.ajax({
+            type: "GET",
+            url: "http://localhost:49971/api/Members",
+            dataType: "json",
+            success: function (data) {
+                var datavalue = data;
+                var myJsonObject = datavalue;
+
+                contentType: "application/json";
+
+                $.each(myJsonObject, function (i, mobj) {
+                    $("#MemberTbl").append('<tr><td width="50px">' + mobj.MemberId +
+                        '</td><td width="50px">' + mobj.Title +
+                        '</td><td width="50px">' + mobj.FirstName +
+                        '</td><td width="50px">' + mobj.LastName +
+                        '</td><td width="50px">' + mobj.Sex +
+                        '</td><td width="50px">' + mobj.Age +
+                        '</td>' + '</td><td width="50px">'
+                        + mobj.Address + '</td></tr>');
+                });
+
+                alert('bought all data successfully');
+            },
+            error: function (xhr) {
+                alert(xhr.responseText);
+            }
+        });
+    }
+
     function GetMemberById() {
-        var id = 1;
+        var id = 4;
+
         $.ajax({
             url: 'http://localhost:49971/api/Members/' + id,
             type: 'GET',
             dataType: "json",
             success: function (data) {
-
                 var datavalue = data;
                 var myJsonObject = datavalue;
 
-                var MemberId = myJsonObject[0].MemberId;
-                var Title = myJsonObject[0].Title;
-                var FirstName = myJsonObject[0].FirstName;
-                var LastName = myJsonObject[0].LastName;
-                var Sex = myJsonObject[0].Sex;
-                var Age = myJsonObject[0].Age;
-                var Address = myJsonObject[0].Address;
+                contentType: "application/json";
+
+                var MemberId = myJsonObject.MemberId;
+                var Title = myJsonObject.Title;
+                var FirstName = myJsonObject.FirstName;
+                var LastName = myJsonObject.LastName;
+                var Sex = myJsonObject.Sex;
+                var Age = myJsonObject.Age;
+                var Address = myJsonObject.Address;
 
                 $('<tr><td>' + MemberId + '</td><td>' + Title +
                     '</td><td>' + FirstName + '</td><td>' + LastName +
@@ -36,69 +68,43 @@
             }
         });
     }
-    function AllMembers() {
-        $.ajax({
-            type: "GET",
-            url: "http://localhost:49971/api/Members",
 
-            dataType: "json",
-            success: function (data) {
-
-                var datavalue = data;
-                var myJsonObject = datavalue;
-                contentType: "application/json";
-                $.each(myJsonObject, function (i, mobj) {
-                    $("#MemberTbl").append('<tr><td width="50px">' + mobj.MemberId +
-                        '</td><td width="50px">' + mobj.Title +
-                        '</td><td width="50px">' + mobj.FirstName +
-                        '</td><td width="50px">' + mobj.LastName +
-                        '</td><td width="50px">' + mobj.Sex +
-                        '</td><td width="50px">' + mobj.Age +
-                        '</td>' + '</td><td width="50px">'
-                        + mobj.Address + '</td></tr>');
-
-                });
-
-                alert('bought all data successfully');
-            },
-            error: function (xhr) {
-                alert(xhr.responseText);
-            }
-        });
-    }
-
-    function PostData() {
-        var cardetails = { CarName: "Ertiga", CarModel: "LXI", CarPrice: "5000000", CarColor: "blue" };
+    function CreateMember() {
+        //var cardetails = { CarName: "Ertiga", CarModel: "LXI", CarPrice: "5000000", CarColor: "blue" };
+        var member = { MemberId:4, Title:"Mr.", FirstName:"Cristiano", LastName:"Ronaldo", Sex:"Male", Age:32, Address:"Portugal" };
 
         $.ajax({
             type: "POST",
-            data: JSON.stringify(cardetails),
-            url: "http://localhost:32359/api/Cardetails",
+            data: JSON.stringify(member),
+            url: "http://localhost:49971/api/Members",
             dataType: "json",
             contentType: "application/json",
         });
 
         alert('posted data successfully');
     }
-    function PutData() {
+
+    function UpdateMember() {
         //var cardetails = { CarName: "Ertiga", CarModel: "LXI", CarPrice: "5000000", CarColor: "blue" };
         var member = { MemberId:4, Title:"Mr.", FirstName:"CristianoA", LastName:"RonaldoB", Sex:"Male", Age:33, Address:"PortugalC" };
         var t = JSON.stringify(member);
         var id = "4";
+
         $.ajax({
             url: 'http://localhost:49971/api/Members/' + id,
             type: "put",
             contentType: "application/json; charset=utf-8",
             data: t,
             dataType: "json",
-
         });
+
         alert('PUT (updated) data successfully');
     }
-    /*function deleteData1() {
-        var id = 0;
+
+    function DeleteMember() {
+        var id = 4;
         $.ajax({
-            url: 'http://localhost:32359/api/CarDetails/' + id,
+            url: 'http://localhost:49971/api/Members/' + id,
             type: 'DELETE',
             success: function (data) {
 
@@ -109,7 +115,7 @@
         });
 
         alert('Deleted data successfully');
-    }*/
+    }
 </script>
 
 @using (Html.BeginForm())
@@ -120,9 +126,9 @@
                 <td>
                     <input id="btnget" type="button" onclick="AllMembers();" value="Get_Data" />
                     <input id="btngetbyid" type="button" onclick="GetMemberById();" value="Get_BYID" />
-                    <input id="Btnpost" type="button" onclick="PostData();" value="Post_Data" />
-                    <input id="Btnput" type="button" onclick="PutData();" value="Put_Data" />
-                    <input id="BtnDelete" type="button" onclick="deleteData1();" value="Delete" />
+                    <input id="Btnpost" type="button" onclick="CreateMember();" value="Post_Data" />
+                    <input id="Btnput" type="button" onclick="UpdateMember();" value="Put_Data" />
+                    <input id="BtnDelete" type="button" onclick="DeleteMember();" value="Delete" />
                 </td>
 
             </tr>
